# a2a-t-sdk-python

./: .env  .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
.tmp_tests/negotiation_store_factory/: supported.env  unsupported.env
docs/: Python A2A SDK原始需求文档.txt  SPEC.md  TASKS.md  需求分析文档模板.md
docs/a2a/: a2a-protocol-完整参考.md  a2a-protocol-精简知识.md  (+1 more)
package_data/: .env  env.example
scripts/: client_prompt_generation_live.py  generate_energy_saving_eval_assets.py  generate_server_prompt_validation_eval_assets.py  generate_subscribe_incident_eval_assets.py  run_energy_saving_eval.py  run_server_prompt_validation_eval.py  run_subscribe_incident_eval.py  server_prompt_compliance_live.py
tests/: __init__.py  test_cache_store.py  test_package_rename.py  test_package_skeleton.py  test_prompt_catalog.py  test_prompt_catalog_registry.py  test_prompt_catalog_registry_impl.py  test_prompt_compliance_docs.py  test_prompt_compliance_env_config.py  test_prompt_compliance_extractor.py  test_prompt_compliance_google_model_armor.py  test_prompt_compliance_guardrails.py  test_prompt_compliance_integration.py  test_prompt_compliance_models.py  test_prompt_compliance_resolution.py  test_prompt_compliance_service.py  test_prompt_compliance_slot_config.py  test_prompt_env_config.py  test_prompt_format_registry.py  test_prompt_manager.py  test_prompt_manager_domain.py  test_providers.py  test_pyproject_build_artifacts.py  test_pyproject_dependencies.py  test_pytest_config.py  test_release_version.py  test_support.py  test_template_parser.py  test_test_support.py
(+326 files in other folders)
